--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--
-  *(c) Copyright 2011 Simone Masiero. Some Rights Reserved.
-  *This work is licensed under a Creative Commons Attribution-Noncommercial-Share Alike 3.0 License
-  -->
-  <head>
+    <!--
+    *(c) Copyright 2011 Simone Masiero. Some Rights Reserved.
+    *This work is licensed under a Creative Commons Attribution-Noncommercial-Share Alike 3.0 License
+    -->
 
-		<meta charset="utf-8">
+    <head>
 
-		<title>Compiler++</title>
+        <meta charset="utf-8">
 
-		<link href="style.css" rel="stylesheet" type="text/css">
+        <title>Compiler++</title>
 
-		<script src="jquery.min.js" type="text/javascript"></script>
+        <link href="style.css" rel="stylesheet" type="text/css">
 
-		<script src="script.js" type="text/javascript"></script>
+        <script src="jquery.min.js" type="text/javascript"></script>
 
-		<script type="text/javascript">
+        <script src="script.js" type="text/javascript"></script>
 
-			Typer.speed = parseInt(getQuery("speed")) || 3;
+        <script type="text/javascript">
+            Typer.speed = parseInt(getQuery("speed")) || 3;
 
-			Typer.file = getQuery("file") || 'txt/kernel.txt';
+            Typer.file = getQuery("file") || 'https://raw.githubusercontent.com/PandemicMoon/hackertyper/master/txt/kernel.txt';
 
-			Typer.init();
+            Typer.init();
+        </script>
 
-		</script>
+    </head>
 
-  </head>
+    <body cz-shortcut-listen="true">
+        <div id="console">|</div>
+    </body>
 
-	<body cz-shortcut-listen="true">
-		<div id="console">|</div>
-  </body>
 </html>
