--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <p><strong>For normal users, simply visit the <a href="DOWNLOADS.md">download</a> page to get the latest version.</strong></p>
 
-<p><a href="https://raw.githubusercontent.com/PandemicMoon/hackertyper/master/screenshot.png"><img src="screenshot.png" alt="Screenshot" title="Screenshot"></a></p>
+<p><a href="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png"><img src="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png" alt="Screenshot" title="Screenshot"></a></p>
 
 <h2>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute</h2>
