--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <p>HackerTyper Desktop Application is based on <a href="http://hackertyper.net">hackertyper.net</a> by Simone Masiero.</p>
 
-            <p><strong>For normal users, simply visit the <a href="DOWNLOADS.md">download</a> page to get the latest version.</strong></p>
+            <p><strong>For normal users, simply visit the <a href="https://github.com/PandemicMoon/hackertyper/blob/master/DOWNLOADS.md">downloads</a> page to get the latest version.</strong></p>
 
             <p>
                 <a href="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png"><img src="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png" alt="Screenshot" title="Screenshot"></a>
@@ -35,10 +35,10 @@
 
             <h2><a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute</h2>
 
-            <p>Learn about <a href="CONTRIBUTING.md">contributing</a> to HackerTyper Desktop Application.</p>
+            <p>Learn about <a href="https://github.com/PandemicMoon/hackertyper/blob/master/CONTRIBUTING.md">contributing</a> to HackerTyper Desktop Application.</p>
 
             <h4>
-                <a id="license-cc0-public-domain" class="anchor" href="#license-cc0-public-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License <a href="LICENSE.md">CC0 (Public Domain)</a>
+                <a id="license-cc0-public-domain" class="anchor" href="#license-cc0-public-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License <a href="https://github.com/PandemicMoon/hackertyper/blob/master/LICENSE.md">CC0 (Public Domain)</a>
             </h4>
 
             <footer class="site-footer">
