--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <p>HackerTyper Desktop Application is based on <a href="http://hackertyper.net">hackertyper.net</a> by Simone Masiero.</p>
 
-            <p><strong>For normal users, simply visit the <a href="https://github.com/PandemicMoon/hackertyper/blob/master/DOWNLOADS.md">downloads</a> page to get the latest version.</strong></p>
+            <p><strong>For normal users, simply visit the <a href="https://github.com/PandemicMoon/hackertyper/releases/latest">releases</a> page to get the latest version.</strong></p>
 
             <p>
                 <a href="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png"><img src="https://github.com/PandemicMoon/hackertyper/raw/gh-pages/screenshot.png" alt="Screenshot" title="Screenshot"></a>
