--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         <script type="text/javascript">
             Typer.speed = parseInt(getQuery("speed")) || 3;
 
-            Typer.file = getQuery("file") || 'txt/kernel.txt';
+            Typer.file = getQuery("file") || '@default@';
 
             Typer.init();
         </script>
